Refs #98849 fixed the following:
- content-area.less:
  - breadcrumbs are no longer moved within the header image for sub 1024px
- external-templates.less:
  - moved fixes to header.less since these changes are not exclusive to
    the external templates
- header.less:
  - breadcrumbs and header image tweaks for sub 1024px
- footer.less:
  - css tweaks in order for portal-footer-logos to show logo and text
    without overlapping

--- a/src/forests/theme/skins/fise_theme_styles/components/content-area.less
+++ b/src/forests/theme/skins/fise_theme_styles/components/content-area.less
@@ -83,3 +83,9 @@
     z-index: 98;
   }
 }
+
+@media (min-width: 768px) and (max-width:1023px){
+  #portal-breadcrumbs {
+    margin: 0 0 2em 0;
+  }
+}
