--- a/src/forests/theme/skins/fise_theme_styles/components/external-templates.less
+++ b/src/forests/theme/skins/fise_theme_styles/components/external-templates.less
@@ -181,19 +181,8 @@ button, input, select, textarea {
 
 }
 
-@media (min-width:768px) and (max-width: 1023px) {
-  .header-image img, .header-image picture {
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  .header-image-title {
-    font-size: 300%;
-    margin-left: 280px;
-    text-align: left;
-    position: relative;
-  }
-}
+//@media (min-width:768px) and (max-width: 1023px) {
+//}
 
 @media (min-width:1280px) {
   .fise-search-header-wrapper #portal-top {
