--- a/src/forests/theme/skins/fise_theme_styles/components/header.less
+++ b/src/forests/theme/skins/fise_theme_styles/components/header.less
@@ -397,21 +397,32 @@
 }
 
 @media (min-width:768px) and (max-width:1023px) {
-  .main-nav-item {
-    padding: 0 0.5em;
-  }
-  .header:after {
-    height: 55px;
-  }
   #portal-header {
     width: 100%;
     height: 55px;
   }
-
+  .header:after {
+    height: 55px;
+  }
   #portal-logo {
     position: absolute;
     left: 0;
     top: 75px;
+  }
+
+  .header-image img, .header-image picture {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .header-image-title {
+    font-size: 300%;
+    margin-left: 280px;
+    text-align: left;
+    position: relative;
+  }
+  .main-nav-item {
+    padding: 0 0.5em;
   }
 }
 
@@ -438,6 +449,6 @@
     max-width: 1270px;
   }
   #portal-siteactions a {
-    font-size: 1.4rem;
+    font-size: 17px;
   }
 }
